...
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/itemtext"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemNameEditText"
        app:layout_constraintEnd_toStartOf="@+id/itemNameEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/quantitytext"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemQuantityEditText"
        app:layout_constraintEnd_toStartOf="@+id/itemQuantityEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/typetextView"
        android:layout_width="wrap_content"
...
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameEditText" />

    <RadioGroup
        android:id="@+id/typeRadioGroup"
        android:layout_width="190dp"
        android:layout_height="184dp"
        android:layout_marginTop="128dp"
        android:baselineAligned="false"
        android:checkedButton="@id/biscuitRadio"
        android:clipToPadding="false"
        android:isScrollContainer="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemMenuTitle">

...
            android:translationX="90dp"
            android:translationY="-47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/cakeRadio"
            android:layout_width="75dp"
            android:layout_height="48dp"
            android:text="@string/cake"
            android:translationX="0dp"
            android:translationY="-62dp" />

        <RadioButton
            android:id="@+id/ingredientRadio"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/ingredient"
            android:translationX="90dp"
            android:translationY="-110dp" />

        <RadioButton
            android:id="@+id/otherRadio"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:text="@string/other"
            android:translationX="50dp"
            android:translationY="-120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RadioGroup>

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="130dp"
        android:layout_height="78dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="90dp"
        android:text="@string/additemMenuTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inventoryStatFromAddButton"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeRadioGroup" />

    <Button
        android:id="@+id/toMainMenuFromAddItem"
...
