<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inventory_status"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inventory_status">

    <TextView
        android:id="@+id/inventoryStatTitleMenu"
...
        android:layout_marginRight="92dp"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemsLabelsTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="117dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:enabled="false"
        android:text="@string/previous"
        app:layout_constraintBaseline_toBaselineOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="117dp"
        android:layout_height="62dp"
...
        android:layout_marginBottom="132dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/mainMenufromInvStat"
        android:layout_width="207dp"
        android:layout_height="96dp"
        android:layout_marginBottom="24dp"
        android:text="@string/backToMainMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
